# flashlib

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: bench_knn_components.py  full_speedup_report.py
benchmarks/micro/: __init__.py  bench_assign_kernel.py  bench_eigh_scaling.py  bench_gemm_pareto.py  bench_kmeans_peak_flops.py  bench_knn_build.py  bench_knn_dtype_smem_fit.py  bench_knn_maxtree_topk.py  bench_knn_small_q.py  bench_knn_small_q_peak.py  bench_lossless_speedup.py  bench_lossy_speedup.py  bench_nb_fit_scaling.py  bench_norm.py
benchmarks/tune/: README.md  __init__.py  _common.py  _template.py  eigh.py  gemm.py  ivf_flat.py  kmeans.py  knn.py  knn_parallel.py
benchmarks/vs_cuml/: README.md  __init__.py  _common.py  _large_shapes.py  _search_shapes.py  dbscan.py  hdbscan.py  ivf_flat.py  ivf_flat_real.py  ivf_pq.py  kmeans.py  kmeans_heavy.py  knn.py  linear_regression.py  logistic_regression.py  multinomial_nb.py  pca.py  random_forest.py  ridge.py  run_all.py  spectral_clustering.py  standard_scaler.py  truncated_svd.py  tsne.py  umap.py
flashlib/: __init__.py  _hw.py  _lazy.py  diagnose.py
flashlib/applications/: __init__.py  dbscan.py  hdbscan.py  ivf_flat.py  ivf_pq.py  kmeans.py  knn.py  linear_regression.py  logistic_regression.py  multinomial_nb.py  pca.py  random_forest.py  ridge.py  spectral_clustering.py  standard_scaler.py  truncated_svd.py  tsne.py  umap.py
flashlib/info/: __init__.py  dispatch.py  (+4 more)
tests/: test_advantage_boundaries.py  test_backend_parity.py  test_eigh_halko.py  test_gemm_variants_parity.py  test_imports.py  test_info.py  test_multi_dsl_integration.py  test_primitives_correctness.py
(+348 files in other folders)
